Fixed spacing issue

--- a/src/styles/components/builder/_Recommendation.scss
+++ b/src/styles/components/builder/_Recommendation.scss
@@ -10,7 +10,7 @@
   background: $gray-lightest;
   border: $border-global;
   border-radius: $border-radius;
-  padding: 1em;
+  padding: 1em 1em 4em 1em;
   margin-bottom: 1em;
 
   &__remove button {
